--- a/index.html
+++ b/index.html
@@ -32,14 +32,18 @@
           <ul class="list">
             <li class="list-item">
               <p>Daily</p>
-              <p>Weekly</p>
+            </li>
+            <li class="list-item">
               <p>Monthly</p>
+            </li>
+            <li class="list-item">
+              <p>Early</p>
             </li>
           </ul>
         </div>
         <div class="card">
-          <div class="header">
-            <img src="images/icon-work.svg" alt="#" />
+          <div class="header header2">
+            <!-- <img src="images/icon-work.svg" alt="#" /> -->
           </div>
           <div class="content">
             <div class="first-row">
@@ -52,8 +56,8 @@
         </div>
 
         <div class="card">
-          <div class="header">
-            <img src="images/icon-work.svg" alt="#" />
+          <div class="header header3">
+            <!-- <img src="images/icon-work.svg" alt="#" /> -->
           </div>
           <div class="content">
             <div class="first-row">
@@ -66,8 +70,8 @@
         </div>
 
         <div class="card">
-          <div class="header">
-            <img src="images/icon-work.svg" alt="#" />
+          <div class="header header4">
+            <!-- <img src="images/icon-work.svg" alt="#" /> -->
           </div>
           <div class="content">
             <div class="first-row">
@@ -80,8 +84,8 @@
         </div>
 
         <div class="card">
-          <div class="header">
-            <img src="images/icon-work.svg" alt="#" />
+          <div class="header header5">
+            <!-- <img src="images/icon-work.svg" alt="#" /> -->
           </div>
           <div class="content">
             <div class="first-row">
@@ -94,8 +98,8 @@
         </div>
 
         <div class="card">
-          <div class="header">
-            <img src="images/icon-work.svg" alt="#" />
+          <div class="header header6">
+            <!-- <img src="images/icon-work.svg" alt="#" /> -->
           </div>
           <div class="content">
             <div class="first-row">
@@ -108,8 +112,8 @@
         </div>
 
         <div class="card">
-          <div class="header">
-            <img src="images/icon-work.svg" alt="#" />
+          <div class="header header7">
+            <!-- <img src="images/icon-work.svg" alt="#" /> -->
           </div>
           <div class="content">
             <div class="first-row">
